# free-fantasy-football

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run_tests.py  start.sh
.github/: copilot-instructions.md
app/backend/: database.py  espn.py  espn_adapter.py  espn_data_init.py  init_data.py  logging_config.py  main.py  models.py
app/backend/src/: database.py  espn.py  main.py
app/backend/test/: test_espn_adapter.py  test_espn_integration.py  test_models.py
app/database/: init.sql
database/: schema.sql
src/: espn.py  init_data.py  main.py
static/: index.html  index_old.html  styles.css
test/: conftest.py  test_dashboard_endpoints.py  test_database_operations.py  test_espn_adapter.py  test_espn_integration.py
tests/: test_database_operations.py  test_espn_adapter.py  test_espn_integration.py  test_models.py
